--- a/lib/pv_web/live/page_live_component.html.leex
+++ b/lib/pv_web/live/page_live_component.html.leex
@@ -1,13 +1,12 @@
 <section class="w-1/2 border-2 shadow flex flex-col place-items-center mx-auto p-6">
-  <h1 class="text-4xl font-bold italic text-gray-700">InstagramClone</h1>
-  <p class="text-gray-500 font-semibold text-lg mt-6 text-center px-8">Sign up to see photos and videos from your friends.</p>
+  <h1 class="text-4xl font-bold italic text-gray-700">Præstevænget</h1>
+  <p class="text-gray-500 font-semibold text-lg mt-6 text-center px-8">Vi er venner.</p>
 
-  <%= form_for @changeset, Routes.user_registration_path(@conn, :create), [class: "flex flex-col space-y-4 w-full px-6"], fn f -> %>
-    <%= if @changeset.action do %>
-      <div class="alert alert-danger">
-        <p>Oops, something went wrong! Please check the errors below.</p>
-      </div>
-    <% end %>
+  <%= f = form_for @changeset, Routes.user_registration_path(@socket, :create),
+    phx_change: "validate",
+    phx_submit: "save",
+    phx_trigger_action: @trigger_submit,
+    class: "flex flex-col space-y-4 w-full px-6" %>
 
     <div class="flex flex-col">
       <%= label f, :email, class: "text-gray-400" %>
@@ -23,24 +22,25 @@
 
     <div class="flex flex-col">
       <%= label f, :apartment_number, class: "text-gray-400" %>
-      <%= text_input f, :apartment_number, class: "rounded border-gray-300 shadow-sm focus:ring-gray-900 focus:ring-opacity-50 focus:border-gray-900" %>
+      <%= number_input f, :apartment_number, class: "rounded border-gray-300 shadow-sm focus:ring-gray-900 focus:ring-opacity-50 focus:border-gray-900" %>
       <%= error_tag f, :apartment_number, class: "text-red-700 text-sm" %>
     </div>
 
     <div class="flex flex-col">
       <%= label f, :password, class: "text-gray-400" %>
-      <%= password_input f, :password, class: "rounded border-gray-300 shadow-sm focus:ring-gray-900 focus:ring-opacity-50 focus:border-gray-900" %>
+      <%= password_input f, :password, value: input_value(f, :password), class: "rounded border-gray-300 shadow-sm focus:ring-gray-900 focus:ring-opacity-50 focus:border-gray-900" %>
       <%= error_tag f, :password, class: "text-red-700 text-sm" %>
     </div>
 
     <div>
       <%= submit "Sign up", phx_disable_with: "Saving...", class: "block w-full py-2 border-none shadow rounded font-semibold text-sm text-gray-50 hover:bg-light-blue-600 bg-light-blue-500 cursor-pointer" %>
     </div>
-  <% end %>
+
+  </form>
 
   <p class="text-sm px-10 text-center mt-6 text-gray-400 font-semibold">By signing up, you agree to our Terms , Data Policy and Cookies Policy .</p>
 </section>
 
 <section class="w-1/2 border-2 shadow flex justify-center mx-auto p-6 mt-6">
-  <p class="text-lg text-gray-600">Have an account? <%= link "Log in", to: Routes.user_session_path(@conn, :new), class: "text-light-blue-500 font-semibold" %></p>
+  <p class="text-lg text-gray-600">Have an account? <%= link "Log in", to: Routes.user_session_path(@socket, :new), class: "text-light-blue-500 font-semibold" %></p>
 </section>
