--- a/lib/pv_web/live/page_live.html.leex
+++ b/lib/pv_web/live/page_live.html.leex
@@ -1,5 +1,8 @@
 <%= if @current_user do %>
-  <h1>User Logged In Homepage</h1>
+  <%= for post <- @posts do %>
+    <h2><%= post.title %></h2>
+    <p><%= post.description %></p>
+  <% end %>
 <% else %>
   <%= live_component @socket, PvWeb.PageLiveComponent, changeset: @changeset, trigger_submit: @trigger_submit %>
 <% end %>
