Add slug to posts

--- a/lib/pv_web/live/header_nav_component.html.leex
+++ b/lib/pv_web/live/header_nav_component.html.leex
@@ -1,5 +1,5 @@
 <div class="h-14 border-b-2 flex fixed w-full bg-white z-50">
-  <header class="flex items-center container mx-auto max-w-full md:w-11/12 2xl:w-6/12">
+  <header class="flex items-center container mx-auto max-w-full sm:w-11/12 2xl:w-6/12">
     <%= live_patch to: Routes.page_path(@socket, :index) do %>
       <h1 class="text-2xl font-bold italic">#Præstevænget</h1>
     <% end %>
