--- a/lib/pv_web/templates/layout/live.html.leex
+++ b/lib/pv_web/templates/layout/live.html.leex
@@ -5,7 +5,7 @@
     <%= live_component @socket, PvWeb.HeaderNavComponent, current_user: @current_user %>
   <% end %>
 <% end %>
-<main role="main" class="container mx-auto max-w-full md:w-11/12 2xl:w-6/12 pt-24"> 
+<main role="main" class="container mx-auto max-w-full sm:w-11/12 2xl:w-6/12 pt-24"> 
   <p class="alert alert-info" role="alert"
     phx-click="lv:clear-flash"
     phx-value-key="info"><%= live_flash(@flash, :info) %></p>
