--- a/lib/pv_web/live/page_live.html.leex
+++ b/lib/pv_web/live/page_live.html.leex
@@ -1,7 +1,10 @@
 <%= if @current_user do %>
   <%= for post <- @posts do %>
-    <h2><%= post.title %></h2>
+    <h2 class="text-2xl font-bold"><%= post.title %></h2>
     <p><%= post.description %></p>
+    <span class="text-gray-400">
+      <%= Timex.to_datetime(post.inserted_at, "Europe/Copenhagen") |> Timex.format!("{YYYY}-{0M}-{0D} {h24}:{m}") %>
+    </span>
   <% end %>
 <% else %>
   <%= live_component @socket, PvWeb.PageLiveComponent, changeset: @changeset, trigger_submit: @trigger_submit %>
