--- a/lib/pv_web/live/components/header_nav_component.html.leex
+++ b/lib/pv_web/live/components/header_nav_component.html.leex
@@ -14,7 +14,7 @@
             <% end %>
           </li>
           <li class="w-7 h-7 ml-6 text-gray-600">
-            <%= live_redirect to: Routes.live_path(@socket, PvWeb.PostLive.New)  do  %>
+            <%= live_redirect to: Routes.live_path(@socket, PvWeb.PostLive.PostNew)  do  %>
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
               </svg>
