--- a/lib/pv_web/live/page_live.html.leex
+++ b/lib/pv_web/live/page_live.html.leex
@@ -1,9 +1,12 @@
 <%= if @current_user do %>
   <div id="posts" phx-update="append">
     <%= for post <- @posts do %>
-      <div id="<%= post.id %>" class="pb-3">
+      <div id="<%= post.id %>" class="border-2 p-3 m-2">
         <h2 class="text-2xl font-bold py-2"><%= post.title %></h2>
-        <p><%= post.description %></p>
+        <p class="text-gray-600 font-light"><%= post.description %></p>
+        <div class="pt-3">
+          <%= live_patch "Se mere", class: "text-blue-400", to: Routes.live_path(@socket, PvWeb.PostLive.PostShow, post.slug) %>
+        </div>
         <div class="text-gray-500 text-sm py-2">
           <%= Timex.to_datetime(post.inserted_at, "Europe/Copenhagen") |> Timex.format!("{YYYY}-{0M}-{0D} {h24}:{m}") %>
           @ <%= post.user.full_name %>
